--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
-  "functions": {
-    "server/index.js": {
-      "memory": 1024
+  "builds": [
+    {
+      "src": "server/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "memory": 1024
+      }
     }
-  },
+  ],
   "rewrites": [
     {
       "source": "/api/:path*",
