--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,20 +2,20 @@
 {
   "short_name": "Huntifyy",
   "name": "Huntifyy - Empowering Student Innovation",
+  "start_url": ".",
+  "display": "standalone",
+  "theme_color": "#0A2540",
+  "background_color": "#ffffff",
   "icons": [
     {
-      "src": "logo.png",
+      "src": "/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "logo.png",
+      "src": "/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#0A2540",
-  "background_color": "#ffffff"
+  ]
 }
